--- a/public/websocket_test.html
+++ b/public/websocket_test.html
@@ -148,7 +148,7 @@
 
             try {
                 log('Logging in...', 'info');
-                const response = await fetch('http://localhost:5000/api/login', {
+                const response = await fetch('https://akhizwe-backend.onrender.com/api/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -187,7 +187,7 @@
             try {
                 logWS('Connecting to WebSocket...', 'info');
                 
-                socket = io('http://localhost:5000', {
+                socket = io('https://akhizwe-backend.onrender.com', {
                     auth: {
                         token: authToken
                     }
